apps/backend/templates/echoserver-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  labels:
    app: echoserver
spec:
  selector:
    app: echoserver
  ports:
    - name: http
      port: 8080
