apps/backend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-microgateway-echoserver
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: https
spec:
  rules:
    - http:
        paths:
          - path: /echo/
            pathType: Prefix
            backend:
              service:
                name: echoserver-microgateway
                port:
                  number: 443
